# conda-rattler-solver

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.devcontainer/: post_create.sh  post_start.sh
.devcontainer/conda-forge/: devcontainer.json
.github/workflows/: tests.yml
conda_rattler_solver/: __init__.py  _conda_build_exceptions.py  exceptions.py  index.py  plugin.py  solver.py  state.py  utils.py
dev/: requirements.txt
recipe/: meta.yaml
tests/: requirements.txt  test_channels.py  test_cli.py  test_downstream.py  test_experimental.py  test_index.py  test_repoquery.py  test_solver.py  test_solver_differences.py  test_user_agent.py  test_workarounds.py
